added images, reset and styles for cards

--- a/index.html
+++ b/index.html
@@ -12,30 +12,44 @@
       <div class="container">
         <div class="title">
           <h1 class="h1">
-            Popular <span class="txt-yellow">quoutes</span> on programming
+            Popular <span class="txt-yellow">quoutes</span> on
+            <span class="txt-pink">programming</span>
           </h1>
-          <p class="txt">by constantine</p>
+          <p class="txt-sm">by constantine</p>
         </div>
         <ul class="card">
           <li class="card-item">
-            <img src="" alt="" class="card-img" />
+            <img src="./assets/html.png" alt="" class="card-img" />
             <div class="card-txt">
-              <p class="txt"></p>
-              <p class="txt"></p>
+              <p class="txt">
+                HTML is the standard markup language for Web pages. With HTML
+                you can create your own Website. HTML is easy to learn - You
+                will enjoy it!
+              </p>
+              <p class="txt">~ HTML</p>
             </div>
           </li>
           <li class="card-item">
-            <img src="" alt="" class="card-img" />
+            <img src="./assets/css.png" alt="" class="card-img" />
             <div class="card-txt">
-              <p class="txt"></p>
-              <p class="txt"></p>
+              <p class="txt">
+                CSS is the language we use to style an HTML document. CSS
+                describes how HTML elements should be displayed. This tutorial
+                will teach you CSS from basic to advanced.
+              </p>
+              <p class="txt">~ CSS</p>
             </div>
           </li>
           <li class="card-item">
-            <img src="" alt="" class="card-img" />
+            <img src="./assets/js.png" alt="" class="card-img" />
             <div class="card-txt">
-              <p class="txt"></p>
-              <p class="txt"></p>
+              <p class="txt">
+                JavaScript is the world's most popular programming language.
+                JavaScript is the programming language of the Web. JavaScript is
+                easy to learn. This tutorial will teach you JavaScript from
+                basic to advanced.
+              </p>
+              <p class="txt">~ JS</p>
             </div>
           </li>
         </ul>
