--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         </div>
         <ul class="card">
           <li class="card-item">
-            <img src="./assets/html.png" alt="" class="card-img" />
+            <div class="card-img">
+              <img src="./assets/gifs/document.gif" alt="" />
+            </div>
             <div class="card-txt">
               <p class="txt">
                 HTML is the standard markup language for Web pages. With HTML
@@ -30,7 +32,9 @@
             </div>
           </li>
           <li class="card-item">
-            <img src="./assets/css.png" alt="" class="card-img" />
+            <div class="card-img">
+              <img src="./assets/gifs/style.gif" alt="" />
+            </div>
             <div class="card-txt">
               <p class="txt">
                 CSS is the language we use to style an HTML document. CSS
@@ -41,7 +45,9 @@
             </div>
           </li>
           <li class="card-item">
-            <img src="./assets/js.png" alt="" class="card-img" />
+            <div class="card-img">
+              <img src="./assets/gifs/rotate.gif" alt="" />
+            </div>
             <div class="card-txt">
               <p class="txt">
                 JavaScript is the world's most popular programming language.
